fixed border on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,10 +5,15 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-link-block-link-block a{
+ .wp-block-link-block-link-block{
+	height: 100%;	
+ }
+
+ .wp-block-link-block-link-block a{
 	display: flex;
 	display: -webkit-flex;
 	text-decoration: none !important;
+	height: 100%;
 }
 .wp-block-link-block-link-block a:hover{
 	text-decoration: none !important;
@@ -19,7 +24,7 @@
 .wp-block-link-block-link-block a .IconBar{
 	grid-column: 1/span 1;
 	// background-color:var(--wp--preset--color--accent);
-	border-width: 0px 2px 0px 0px;
+	border-width: 0px 1px 0px 0px;
 	border-style: solid;
 	border-color: var(--wp--preset--color--contrast);
 	width: 2.5rem;
@@ -57,6 +62,8 @@
 	-webkit-flex-direction:column;
 	gap:var(--wp--preset--spacing--40);
 	flex-grow: 1;
+	justify-content: space-between;
+	-webkit-justify-content:space-between;
 }
 .wp-block-link-block-link-block a .BlockCopy *{
 	margin: 0px;
@@ -65,6 +72,10 @@
 @media screen and (max-width:768px) {
 	.wp-block-link-block-link-block a{
 		flex-direction:row-reverse;
+	}
+	.wp-block-link-block-link-block a .IconBar{
+		border-width: 0px 0px 0px 1px;
+
 	}
 }
 
